# smartdict

./: CMakeLists.txt  Makefile  README.md  init_server.py  smartdict.py
Yo-Yo/: algo.cpp  algo.cpp~  algo.h  algo.h~  frequency.cpp  frequency.h  frequency.txt  index  index.txt  indexer.cpp  indexer.cpp~  indexer.h  indexer.h~  indexer_old.cpp  indexer_old.cpp~  main  main.cpp  main.cpp~  parser.cpp  parser.cpp~  parser.h  test.txt  text
app/app/: settings.py  urls.py
app/templates/: index.html
app/word_search/: views.py
data/: build_index  data.txt  example  sentences
indexer/: CMakeLists.txt  indexer.py  main.cpp
libs/: CMakeLists.txt
libs/indexer/: CMakeLists.txt  indexer.cpp  indexer.h
libs/parser/: CMakeLists.txt  parser.cpp  parser.h
search/: CMakeLists.txt  main.cpp
searcher/: searcher.py
src/: indexer.cpp
src/back-end/: indexer.h  main.cpp  parser.cpp  parser.h
src/front-end/: main.html  style.css
templates/: layout.html  search.html  search.html~
